--- a/logseq/theme/right_sidebar.scss
+++ b/logseq/theme/right_sidebar.scss
@@ -7,15 +7,16 @@
   height: unset;
 
   .sidebar-item {
+    box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075),
+      0 2px 2px hsl(0deg 0% 0% / 0.075), 0 4px 4px hsl(0deg 0% 0% / 0.075),
+      0 8px 8px hsl(0deg 0% 0% / 0.075), 0 16px 16px hsl(0deg 0% 0% / 0.075);
     min-width: 640px;
     max-width: 640px;
-    box-shadow: none;
     max-height: 100vh;
     overflow-y: scroll;
     background-color: var(--white);
 
     position: relative;
-    overflow: none;
     padding: 0;
     .page-title,
     .breadcrumb {
@@ -26,8 +27,15 @@
       line-height: 3rem;
       position: absolute;
       left: 0;
-      top: 2rem;
+      top: 1rem;
     }
+
+    .close {
+      position: absolute;
+      left: 0;
+      bottom: 1rem;
+    }
+
     > div > .flex {
       height: 0;
     }
